added createdDate to db and print it in list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="angular-resource.min.js"></script>
     <script src="firebase.js"></script>
     <script src="angularFire.js"></script>
+    <script src="dateFormat.js"></script>
     <script src="project.js"></script>
     <link href="main.css" rel="stylesheet"/></head>
 <body ng-controller="MainCtrl">
