* translated to swedish * added placeholder texts * tried to focus description on selecting a report type

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="project">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="jquery-1.9.1.js"></script>
     <script src="angular.min.js"></script>
     <script src="angular-resource.min.js"></script>
     <script src="firebase.js"></script>
