--- a/detail.html
+++ b/detail.html
@@ -1,18 +1,19 @@
 <form name="myForm">
     <div class="control-group" ng-class="{error: myForm.type.$invalid}">
-        <select name="type" ng-model="project.type" required>
+        <select name="type" ng-model="project.type" onchange="$('#description').focus()" required>
             <option value="problem">Felanmälan</option>
             <option value="suggestion">Förslag</option>
             <option value="success">Framgångssaga</option>
         </select>
     </div>
 
-    <textarea name="description" ng-model="project.description" ng-disabled="myForm.type.$invalid"></textarea>
+    <textarea id="description" name="description" ng-model="project.description"
+              ng-disabled="myForm.type.$invalid" placeholder="Beskrivning"></textarea>
 
     <br>
-    <a href="#/" class="btn">Cancel</a>
+    <a href="#/" class="btn">Avbryt</a>
     <button ng-click="save()" ng-disabled="isClean() || myForm.$invalid"
-            class="btn btn-primary">Save</button>
+            class="btn btn-primary">Spara</button>
     <button ng-click="destroy()"
-            ng-show="project.$id" class="btn btn-danger">Delete</button>
+            ng-show="project.$id" class="btn btn-danger">Ta bort</button>
 </form>
