--- a/list.html
+++ b/list.html
@@ -1,8 +1,8 @@
 <span><input type="text" ng-model="search" class="search-query" placeholder="Söktext">
-<input class="add" type="button" value="Ny rapport"     onclick="window.location.href = '#/new';"></span>
+<input class="add" type="button" value="Ny rapport" onclick="window.location.href = '#/new';"></span>
 
-<ul class="report-list" ng-repeat="project in projects | filter:context.target:strict | filter:search | orderBy:'-createdDate'">
-    <li ng-click="viewReport(project.$id)">
-        {{formatDate(project.createdDate)}}<br/>{{project.description}}
+<ul class="report-list" ng-repeat="report in reports | filter:context.target:strict | filter:search | orderBy:'-createdDate'">
+    <li ng-click="viewReport(report.$id)">
+        {{formatDate(report.createdDate)}}<br/>{{report.description}}
     </li>
 </ul>
