--- a/detail.html
+++ b/detail.html
@@ -24,5 +24,5 @@
     <button ng-click="save()" ng-disabled="isClean() || myForm.$invalid"
             class="btn btn-primary">Spara</button>
     <button ng-click="destroy()"
-            ng-show="report.$id" class="btn btn-danger">Ta bort</button>
+            ng-show="report.id" class="btn btn-danger">Ta bort</button>
 </form>
