moved most files to directories js, css etc

--- a/detail.html
+++ b/detail.html
@@ -12,10 +12,10 @@
 
     <br>
     <ul class="attachmentlist" ng-repeat="attachment in report.attachments">
-        <li ng-click="viewImage(attachment.id)"><img src="camera.png"></li>
+        <li ng-click="viewImage(attachment.id)"><img src="img/camera.png"></li>
     </ul>
     <div class="image-upload">
-        <label for="file-upload"><img src="camera-plus.png"/></label>
+        <label for="file-upload"><img src="img/camera-plus.png"/></label>
         <input id="file-upload" type="file" accept="image/*" capture="camera">
     </div>
     <br>
