* reformatted code * added documntation in README

--- a/detail.html
+++ b/detail.html
@@ -22,7 +22,9 @@
 
     <a href="#/" class="btn">Avbryt</a>
     <button ng-click="save()" ng-disabled="isClean() || myForm.$invalid"
-            class="btn btn-primary">Spara</button>
+            class="btn btn-primary">Spara
+    </button>
     <button ng-click="destroy()"
-            ng-show="report.id" class="btn btn-danger">Ta bort</button>
+            ng-show="report.id" class="btn btn-danger">Ta bort
+    </button>
 </form>
