--- a/list.html
+++ b/list.html
@@ -3,7 +3,8 @@
 
 <div ng-show="loading">Hämtar rapporter...</div>
 <div ng-show="!loading && reports.length == 0">Inga rapporter.</div>
-<ul class="report-list" ng-repeat="report in reports | filter:context.target:strict | filter:search | orderBy:'-createdDate'">
+<ul class="report-list"
+    ng-repeat="report in reports | filter:context.target:strict | filter:search | orderBy:'-createdDate'">
     <li ng-click="viewReport(report.id)">
         <div><span class="report-list-date">{{formatDate(report.changedDate)}}</span></div>
         <div><span class="report-list-description">{{report.description}}</span></div>
