--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html ng-app="report">
-    <head>
-        <title>Reporter</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="vendor/jquery-1.9.1.js"></script>
-        <script src="vendor/angular.min.js"></script>
-        <script src="vendor/angular-resource.min.js"></script>
-        <script src="js/repository.js"></script>
-        <script src="js/dateFormat.js"></script>
-        <script src="js/report.js"></script>
-        <link href="css/main.css" rel="stylesheet"/></head>
-    <body ng-controller="MainCtrl">
-        <h2 class="target-title">{{target}}</h2>
-        <div ng-view></div>
-    </body>
+<head>
+    <title>Reporter</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="vendor/jquery-1.9.1.js"></script>
+    <script src="vendor/angular.min.js"></script>
+    <script src="vendor/angular-resource.min.js"></script>
+    <script src="js/repository.js"></script>
+    <script src="js/dateFormat.js"></script>
+    <script src="js/report.js"></script>
+    <link href="css/main.css" rel="stylesheet"/>
+</head>
+<body ng-controller="MainCtrl">
+    <h2 class="target-title">{{target}}</h2>
+    <div ng-view></div>
+</body>
 </html>
