impl progress bar while uploading

--- a/detail.html
+++ b/detail.html
@@ -29,4 +29,7 @@
     <button ng-click="destroy()"
             ng-show="report.id" class="btn btn-danger">Ta bort
     </button>
-</form>
+    <div id="bardiv">
+        <div id="progressbar"></div>
+        <div id="progresstext">Sänder fil...</div>
+    </div></form>
