--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="vendor/jquery-1.9.1.js"></script>
+    <script src="vendor/jquery-ui-1.10.3.custom.js"></script>
     <script src="vendor/angular.min.js"></script>
     <script src="vendor/angular-resource.min.js"></script>
     <script src="js/repository.js"></script>
     <script src="js/dateFormat.js"></script>
     <script src="js/report.js"></script>
     <link href="css/main.css" rel="stylesheet"/>
+    <link href="css/ui-lightness/jquery-ui-1.10.3.custom.css" rel="stylesheet"/>
 </head>
 <body ng-controller="MainCtrl">
     <h2 class="target-title">{{target}}</h2>
