impl progress bar while uploading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/dateFormat.js"></script>
     <script src="js/report.js"></script>
     <link href="css/main.css" rel="stylesheet"/>
-    <link href="css/ui-lightness/jquery-ui-1.10.3.custom.css" rel="stylesheet"/>
+    <link href="css/ui-lightness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet"/>
 </head>
 <body ng-controller="MainCtrl">
     <h2 class="target-title">{{target}}</h2>
