now delete report deletes attachments and files too

--- a/detail.html
+++ b/detail.html
@@ -1,3 +1,4 @@
+<h2 class="target-title">{{target}}</h2>
 <form name="myForm">
     <div class="control-group" ng-class="{error: myForm.type.$invalid}">
         <select name="type" ng-model="report.type" onchange="$('#description').focus()" required>
