--- a/list.html
+++ b/list.html
@@ -1,6 +1,7 @@
-<div>
-<a class="target-title-button" href="#/new">+</a>
-<h2 class="target-title">{{target}}</h2>
+<div class="toprow">
+    <span class="left-button invisible"><img src="img/plus.png"/></span>
+    <h2 class="centered-title">{{target}}</h2>
+    <a class="right-button" href="#/new"><img src="img/plus.png"/></a>
 </div>
 <div class="search-bar">
 <input class="search-text" type="text" ng-model="search" placeholder="Sök">
