fixed layout of attachment symbols, and made them show up in create report page

--- a/detail.html
+++ b/detail.html
@@ -18,18 +18,17 @@
 
         <textarea id="description" name="description" ng-model="report.description"
                   ng-disabled="myForm.type.$invalid" placeholder="Beskrivning"></textarea>
-        <br>
 
-        <ul class="attachmentlist" ng-repeat="attachment in report.attachments">
-            <li ng-click="viewImage(attachment.id)"><img ng-src="img/{{imageByMime(attachment.mimetype)}}"></li>
-        </ul>
-        <div class="image-upload">
-            <label for="image-upload"><img src="img/camera-plus.png"/></label>
-            <input id="image-upload" type="file" accept="image/*" capture="camera">
-            <label for="audio-upload"><img src="img/microphone-plus.png"/></label>
-            <input id="audio-upload" type="file" accept="audio/*" capture="microphone">
+        <div class="attachmentrow">
+            <div ng-repeat="attachment in report.attachments" ng-click="viewImage(attachment.id)">
+                <img ng-src="img/{{imageByMime(attachment.mimetype)}}">
+            </div>
+            <div class="attachmentitem"></div>
+            <div><label for="image-upload"><img src="img/camera-plus.png"/></label></div>
+            <div><label for="audio-upload"><img src="img/microphone-plus.png"/></label></div>
         </div>
-        <br>
+        <input class="hidden" id="image-upload" type="file" accept="image/*" capture="camera">
+        <input class="hidden" id="audio-upload" type="file" accept="audio/*" capture="microphone">
 
         <div id="bardiv">
             <div id="progressbar"></div>
