--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="vendor/jquery-1.9.1.js"></script>
     <script src="vendor/jquery-ui-1.10.3.custom.js"></script>
     <script src="vendor/angular.min.js"></script>
-    <script src="vendor/angular-resource.min.js"></script>
+    <script src="vendor/angular-route.min.js"></script>
     <script src="js/repository.js"></script>
     <script src="js/dateFormat.js"></script>
     <script src="js/report.js"></script>
