--- a/audio.html
+++ b/audio.html
@@ -1,3 +1,7 @@
+<div class="toprow gray-bottom-divider">
+    <h2 class="centered-title">{{target}}</h2>
+    <a class="right-button" ng-click="destroy()"><img src="img/delete.png"/></a>
+</div>
 <audio controls>
     <source src="{{url}}" type="{{mime}}">
     Din webbläsare stöder inte audio-element enligt HTML5.
