added jira integration on the server side, except delete report and attachment

--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
         <div class="toprow gray-bottom-divider">
             <a class="left-button" href="#/"><img src="img/x.png"/></a>
             <h2 class="centered-title">{{target}}</h2>
-            <a class="right-button" ng-click="destroy()"><img src="img/delete.png"/></a>
+            <!--<a class="right-button" ng-click="destroy()"><img src="img/delete.png"/></a>-->
             <a class="right-button" ng-click="save()"><img src="img/done-check.png"/></a>
         </div>
         <div class="toprow smallertext leftrightpad" ng-class="{error: myForm.type.$invalid}">
