fixed bug with responding with error codes reenabled delete commands for reports and attachments

--- a/image.html
+++ b/image.html
@@ -1,5 +1,5 @@
 <div class="toprow gray-bottom-divider">
     <h2 class="centered-title">{{target}}</h2>
-    <!--<a class="right-button" ng-click="destroy()"><img src="img/delete.png"/></a>-->
+    <a class="right-button" ng-click="destroy()"><img src="img/delete.png"/></a>
 </div>
 <img class="fitpage" src="{{imageurl}}">
